added tomee & liberty plugin
liberty does not work though, because even the Beta does not have
@Scheduler support yet